Quick changes to parser.